--- a/.license_check.yaml
+++ b/.license_check.yaml
@@ -21,26 +21,6 @@
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 #
-apiVersion: v2
-name: cray-import-kiwi-recipe-image
-version: 2.1.0
-description: Base chart for importing Cray-authored Kiwi Descriptions and images into
-  IMS/S3 on Shasta systems.
-keywords:
-- ims
-- s3
-- images
-- kiwi
-home: https://github.com/Cray-HPE/cray-product-install-charts
-sources:
-- https://github.com/Cray-HPE/cray-product-install-charts
-maintainers:
-- email: randy.kleinman@hpe.com
-  name: rkleinman
-- email: eric.cozzi@hpe.com
-  name: ecozzi-hpe
-annotations:
-  artifacthub.io/images: |
-    - name: cray-product-catalog-update
-      image: artifactory.algol60.net/csm-docker/stable/cray-product-catalog-update:1.3.1
-  artifacthub.io/license: MIT
+add_exclude:
+  - .env/
+  - .idea/
