Add gh actions workflows

--- a/.github/workflows/charts-lint-test-scan.yml
+++ b/.github/workflows/charts-lint-test-scan.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches:
       - master
-      - release/**
+      - develop
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
