--- a/charts/cray-import-kiwi-recipe-image/Chart.yaml
+++ b/charts/cray-import-kiwi-recipe-image/Chart.yaml
@@ -36,11 +36,11 @@ sources:
 - https://github.com/Cray-HPE/cray-product-install-charts
 maintainers:
 - email: randy.kleinman@hpe.com
-  name: rkleinman
+  name: rkleinman-hpe
 - email: eric.cozzi@hpe.com
   name: ecozzi-hpe
 annotations:
   artifacthub.io/images: |
     - name: cray-product-catalog-update
-      image: artifactory.algol60.net/csm-docker/stable/cray-product-catalog-update:1.3.1
+      image: artifactory.algol60.net/csm-docker/stable/cray-product-catalog-update:1.5.2
   artifacthub.io/license: MIT
