Add missing fixes from CASMCMS-7676

--- a/charts/cray-import-kiwi-recipe-image/templates/configmap.yaml
+++ b/charts/cray-import-kiwi-recipe-image/templates/configmap.yaml
@@ -31,7 +31,7 @@ metadata:
   labels:
     app.kubernetes.io/name: cray-ims
 data:
-  template_dictionary:
+  template_dictionary: |
     {{- with .Values.import_job.IMS_TEMPLATE_DICTIONARY -}}
     {{ toYaml . | nindent 4 -}}
     {{- end }}
