CASMCMS-7970 - update dev.cray.com addresses.

--- a/charts/cray-import-kiwi-recipe-image/values.yaml
+++ b/charts/cray-import-kiwi-recipe-image/values.yaml
@@ -22,10 +22,11 @@
 # OTHER DEALINGS IN THE SOFTWARE.
 #
 
-# Full image including repo, e.g. dtr.dev.cray.com/cray/import-image:1.2.3
-#                                                   ^                  ^
-#                                                   |                  |
-#                                             ['repository]          [tag]
+# Full image including repo, e.g.:
+#  artifactory.algol60.net/csm-docker/stable/cray-csm-sles15sp3-barebones-recipe:1.2.3
+#                                       ^                                          ^
+#                                       |                                          |
+#                                 ['repository]                                  [tag]
 
 # Docker image that will be used in the `import_job` (settings below). This image
 # should use the cray-ims-load-artifacts image as its base.
