--- a/charts/cray-import-kiwi-recipe-image/Chart.yaml
+++ b/charts/cray-import-kiwi-recipe-image/Chart.yaml
@@ -33,7 +33,12 @@ keywords:
 - kiwi
 home: https://github.com/Cray-HPE/cray-product-install-charts
 maintainers:
-  - name: Cray-HPE/teams/cray-management-systems
+- name: mharding-hpe
+  email: mitchell.harding@hpe.com
+  url: https://github.com/orgs/Cray-HPE/teams/cray-management-systems
+- name: dlaine-hpe
+  email: laine@hpe.com
+  url: https://github.com/orgs/Cray-HPE/teams/cray-management-systems
 sources:
 - https://github.com/Cray-HPE/cray-product-install-charts
 annotations:
