CASMCMS-7922: Use BOS V2's session template endpoint
Update the BOS session template endpoint to point at BOS V2's endpoint;
Change the environment variable name from BOS_SESSION_ENDPOINT to
BOS_SESSIONTEMPLATES_ENDPOINT.

Co-authored-by: Jason Sollom <jason.sollom@hpe.com>

--- a/charts/cray-import-kiwi-recipe-image/Chart.yaml
+++ b/charts/cray-import-kiwi-recipe-image/Chart.yaml
@@ -39,6 +39,9 @@ maintainers:
 - name: dlaine-hpe
   email: laine@hpe.com
   url: https://github.com/orgs/Cray-HPE/teams/cray-management-systems
+- name: jsollom-hpe
+  email: jason.sollom@hpe.com
+  url: https://github.com/orgs/Cray-HPE/teams/cray-management-systems
 sources:
 - https://github.com/Cray-HPE/cray-product-install-charts
 annotations:
